engine/tests/detection_corpus/bad/exec_child_process.js
const cp = require('child_process');
cp.exec(`ping ${host}`);
